--- a/main-app/templates/base.html
+++ b/main-app/templates/base.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html>
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
     <body>
-        <h1>Upload and download a file</h1>
+        <h2>Upload and download a file</h2>
 
         <form action="/transform" method="post" enctype="multipart/form-data">
             <input type="file" name="data_file" />
             <input type="submit" />
         </form>
 
-        <h1>Query and download a file</h1>
+        <h2>Query and download a file</h2>
 
 		<form action="{{ url_for('queryAndDownload') }}" method="get">
 			<dl>
@@ -18,8 +19,11 @@
 			</dl>
 		</form>
 
-    	<p><a href="/test.mp4"> play </a></p>
+    	<p><a href="/test.mp4"> Play Basic </a></p>
 		{% block player %}{% endblock %}
+
+        <p><a href="/hls/test.m3u8"> Play HLS </a></p>
+        {% block hlsplayer %}{% endblock %}
 
     </body>
 </html>
