--- a/main-app/templates/hlsvideoplayer.html
+++ b/main-app/templates/hlsvideoplayer.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% block player %}
-  <h1>Basic HTML5 video, {{ title }}</h1>
+{% block hlsplayer %}
+  <h2>HLS HTML5 video, {{ title }}</h2>
     <video controls width="640" height="480">
-      <source src="static/videos/{{ title }}" type="video/mp4">
+      <source src="static/videos/hls/{{ title }}" type="application/x-mpegURL">
       Your browser does not support the video tag.
     </video>
 {% endblock %}
