--- a/main-app/templates/base.html
+++ b/main-app/templates/base.html
@@ -25,5 +25,12 @@
         <p><a href="/hls/test.m3u8"> Play HLS </a></p>
         {% block hlsplayer %}{% endblock %}
 
+        <button id="jstest" onclick="myfunction(5,6);">JavaScript Test</button>
+        <script type="text/javascript">
+            function myfunction(a,b) {
+                document.getElementById('jstest').innerHTML = a * b;
+            }
+        </script>
+
     </body>
 </html>
