--- a/media-source-tutorial/views/adaptive-streaming-player.html
+++ b/media-source-tutorial/views/adaptive-streaming-player.html
@@ -46,6 +46,10 @@
             <select class="ww4-select" id="rendition">
                 <option value="1080" selected>1080</option>
                 <option value="180">180</option>
+                <option value="360">360</option>
+                <option value="480">480</option>
+                <option value="720">720</option>
+
             </select>
         </td>
     </tr>
@@ -63,7 +67,7 @@
             </div>
 
         </td>
-        <td>Download Time Ratio</td>
+        <td id="factor-string">Download Time Ratio</td>
 
         <td id="factor-display">0.0000</td>
     </tr>
